--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^2.0.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "nodejs" : "16.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
