--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4",
-    "node.js" : "16.4.1"
+    "nodejs" : "14-lts"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
