--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "nodemon": "^2.0.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "nodejs" : "14-lts"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
