--- a/.github/workflows/main_smvm.yml
+++ b/.github/workflows/main_smvm.yml
@@ -24,9 +24,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm run test --if-present
-
+        ng add @angular/material
+        
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
@@ -53,4 +52,4 @@ jobs:
         app-name: 'smvm'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_1b48d8589aed4329ac099238e93b1ffb }}
-        package: .
+        package: ./dist/
