--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "mat" : "ng add @angular/material"
+    "mat": "ng add @angular/material"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@azure/ng-deploy": "^0.2.3",
     "angularx-social-login": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
