--- a/.github/workflows/main_ngsocialapp.yml
+++ b/.github/workflows/main_ngsocialapp.yml
@@ -24,8 +24,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm mat
+        ng build --prod
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -53,4 +53,4 @@ jobs:
         app-name: 'ngsocialapp'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_4b552160115c49318ae5a2341a5d388e }}
-        package: .
+        package: dist/SocialMediaApp
