--- a/.github/workflows/main_ngsocialapp.yml
+++ b/.github/workflows/main_ngsocialapp.yml
@@ -21,12 +21,15 @@ jobs:
       with:
         node-version: '14.x'
 
-    - name: npm install, build, and test
+    - name: npm install
       run: |
         npm install
+        
+    - name: mat and build
+      run: |
         npm mat
         ng build --prod
-
+    
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
@@ -53,4 +56,4 @@ jobs:
         app-name: 'ngsocialapp'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_4b552160115c49318ae5a2341a5d388e }}
-        package: dist/SocialMediaApp
+        package: .
